--- a/src/app/components/user/user/user2.component.css
+++ b/src/app/components/user/user/user2.component.css
@@ -1,3 +1,16 @@
+.delete-image{
+    float: right;
+    margin-top: 5px;
+    margin-right: 5px;
+    border: none !important;
+    background: none !important;
+  }
+  .image-upload-container{
+    border: 1px solid rgba(0,0,0,0.54);
+    border-radius: 5px;
+    width:152px;
+  }
+  
 body {
     margin-top: 20px;
     background-color: #e9ebee;
