--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -119,7 +119,7 @@
 
             </div>
         </div>
-        <div *ngIf="post.containsText" class="description" [innerHTML]="post.postText">
+        <div *ngIf="post.containsText" (click)="tagUsersRedirectTo($event)" class="description" [innerHTML]="postText">
             <!-- <p class="card-text" >
             </p> -->
         </div>
@@ -298,7 +298,7 @@
 
             </div>
         </div>
-        <div *ngIf="post.containsText" class="description" [innerHTML]="post.postText">
+        <div *ngIf="post.containsText" (click)="tagUsersRedirectTo($event)" class="description" [innerHTML]="postText">
 
         </div>
         
