--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -180,8 +180,14 @@
                                  aria-labelledby="posts-tab">
                                 <div class="form-group">
                                     <label class="sr-only" for="message">post</label>
-                                    <textarea class="form-control" id="message" rows="3"
-                                              placeholder="Comment" ([ngModel])="textComment"></textarea>
+                                    <textarea (keypress)="getUsers($event)" class="form-control" id="message" rows="3"
+                                              placeholder="Comment" ([ngModel])="textComment" [mentionConfig]="mentionConfig" 
+                                              [mentionListTemplate]="mentionListTemplate"></textarea>
+                                              <ng-template #mentionListTemplate let-item="item">
+                                                <img class="mr-3" src="{{item.img}}" alt="" width="30" height="30">
+                                                &nbsp;
+                                                <span>{{item.name}}</span>
+                                              </ng-template>              
                                     <div class="attachments">
                                         <ul>
                                             <li>
@@ -333,8 +339,14 @@
                                 <div class="form-group">
                                     <label class="sr-only" for="message">post</label>
                                     <textarea class="form-control" id="message" rows="3"
-                                              placeholder="Comment" ([ngModel])="textComment"></textarea>
-                                    <div class="attachments">
+                                              placeholder="Comment" [mentionConfig]="mentionConfig" 
+                                              [mentionListTemplate]="mentionListTemplate" ([ngModel])="textComment" (keypress)="getUsers($event)"></textarea>
+                                              <ng-template #mentionListTemplate let-item="item">
+                                                <img class="mr-3" src="{{item.img}}" alt="" width="30" height="30">
+                                                &nbsp;
+                                                <span>{{item.name}}</span>
+                                              </ng-template>
+                                        <div class="attachments">
                                         <ul>
                                             <li>
                                                 <i class="fa fa-image"></i>
