--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -189,11 +189,12 @@
                                                 <span>{{item.name}}</span>
                                               </ng-template>              
                                     <div class="attachments">
+                                        <span *ngIf="isFileSizeError" class="file-upload-error" >Please upload image file with size less than 2MB.</span>
                                         <ul>
                                             <li>
                                                 <i class="fa fa-image"></i>
                                                 <label class="fileContainer">
-                                                    <input type="file" id="stageUploadedFile"
+                                                    <input type="file" accept="image/gif, image/jpg, image/jpeg, image/png" id="stageUploadedFile"
                                                            (change)="onFileSelected($event)">
                                                 </label>
                                             </li>
@@ -347,11 +348,13 @@
                                                 <span>{{item.name}}</span>
                                               </ng-template>
                                         <div class="attachments">
+                                            <span *ngIf="isFileSizeError" class="file-upload-error" >Please upload image file with size less than 2MB.</span>
+ 
                                         <ul>
                                             <li>
                                                 <i class="fa fa-image"></i>
                                                 <label class="fileContainer">
-                                                    <input type="file" id="stageUploadedFile"
+                                                    <input type="file" id="stageUploadedFile" accept="image/gif, image/jpg, image/jpeg, image/png"
                                                            (change)="onFileSelected($event)">
                                                 </label>
                                             </li>
