--- a/src/app/components/post/newpost/newpost.component.html
+++ b/src/app/components/post/newpost/newpost.component.html
@@ -50,24 +50,21 @@
             <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
                 <div class="form-group">
                     <label class="sr-only" for="message">post</label>
-                    <!-- <textarea class="form-control" id="message" rows="3"
-                              placeholder="What are you thinking?" [(ngModel)]='txtPost' [mention]="items" [mentionConfig]="{triggerChar:'@',maxItems:10,labelKey:'name'}"></textarea>
-                    -->
-                              <textarea class="form-control" id="message" rows="3"
-                              placeholder="What are you thinking?" [(ngModel)]='txtPost' 
-                              [mentionConfig]="mentionConfig" 
-                              [mentionListTemplate]="mentionListTemplate" (keypress)="getUsers($event)"
-                            ></textarea>
+
+                            <div id="postContent" contenteditable="true"
+                            [mentionConfig]="mentionConfig" placeholder="What are you thinking?"
+                            [mentionListTemplate]="mentionListTemplate" spellcheck="true" (keyup)="getUsers($event)"> 
+                            </div>
 
                             <ng-template #mentionListTemplate let-item="item">
                                 <img class="mr-3" src="{{item.img}}" alt="" width="30" height="30">
                                 &nbsp;
                                 <span>{{item.name}}</span>
                               </ng-template>
+
                               <div class="attachments">
                                 <span *ngIf="isFileSizeError" class="file-upload-error" >Please upload image file with size less than 2MB.</span>
-
-                        <ul>
+                         <ul>
                             <li>
                                 <i class="fa fa-image"></i>
                                 <label class="fileContainer">
