--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -3,7 +3,7 @@
 
 <div class="card gedf-card">
     <cdk-virtual-scroll-viewport style="height: 550px" itemSize="90">
-        <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [comments]="false" [idx]="i">
+        <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i">
         </app-postcard>
     </cdk-virtual-scroll-viewport>
 </div>
