--- a/src/app/components/post/postcard/postcard.component.html
+++ b/src/app/components/post/postcard/postcard.component.html
@@ -58,7 +58,7 @@
 </div>-->
 
 
-<div class="card gedf-card"  *ngIf="comments==false">
+<div class="card gedf-card"  *ngIf="isComment==false">
     <div class="card-header">
         <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex justify-content-between align-items-center">
@@ -256,7 +256,7 @@
                 <br/>
             </div>
         </ng-container>
-        <app-postcard  *ngFor="let post of post.comments" [comments]="true" [post]="post">
+        <app-postcard  *ngFor="let post of post.comments" [isComment]="true" [post]="post">
         </app-postcard>
         <button *ngIf="post.totalComments>3" type="button" class="btn btn-xs load-more-comments" (click)="loadMoreComments(post.id)">Load more
             comments
@@ -265,7 +265,7 @@
 </div>
 <br/>
 
-<div class="card gedf-card comments-card"  *ngIf="comments==true">
+<div class="card gedf-card comments-card"  *ngIf="isComment==true">
     <div class="card-header">
         <div class="d-flex justify-content-between align-items-center">
             <div class="d-flex justify-content-between align-items-center">
@@ -398,7 +398,7 @@
                 <br/>
             </div>
         </ng-container>
-        <app-postcard  *ngFor="let post of post.comments" [comments]="true" [post]="post">
+        <app-postcard  *ngFor="let post of post.comments" [isComment]="true" [post]="post">
         </app-postcard>
     </div>
 
