--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -1,7 +1,7 @@
 <app-newpost (newpost)="PostNewEvent($event)" *ngIf="!disableNewPost"></app-newpost>
 
 
-<div class="card gedf-card">
+<div class="card gedf-card post-list">
     <cdk-virtual-scroll-viewport style="height: 550px" itemSize="90" (scroll)="onPostScroll($event)">
         <app-postcard  *ngFor="let post of posts; let i = index" [post]="post" [isComment]="false" [idx]="i">
         </app-postcard>
