global search funtionality added

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,14 @@ body {
 a {
     cursor: pointer;
 }
+.search-field{
+    width: 40%;
+    margin-top: 1%;
+}
+
+.ng-autocomplete{
+    width: 550px;
+}
 
 .mylogo {
     height: 50px;
