--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,10 +30,47 @@
                 </li>
 
             </ul>
-            <form class="form-inline my-2 my-lg-0 col-md-5">
+            <!-- <form class="form-inline my-2 my-lg-0 col-md-5">
                 <input class="myform-control mr-sm-2" type="search" placeholder="Search GoPolitix" aria-label="Search">
                 <button class="btn btn-light"><i class="fa fa-search"></i></button>
-            </form>
+            </form> -->
+
+            <!-- <div class="form-group search-field">
+                <input id="userName" type="text"
+                       name="userName"
+                       placeholder="Search GoPolitix"
+                       class="form-control"                     
+                       [(ngModel)]="searched"
+                       [ngbTypeahead]="search"                     
+                       [resultFormatter]="resultFormatBandListValue"
+                       [inputFormatter]="inputFormatBandListValue"
+                       #instance="ngbTypeahead"                     
+                  />
+                  <!-- <button class="btn btn-light"><i class="fa fa-search"></i></button> 
+              </div> -->
+              <div class="ng-autocomplete">
+                <ng-autocomplete
+                  [data]="states"
+                  (inputChanged) = "onChangeSearch($event)"
+                  [searchKeyword]="keyword"
+                  placeHolder="Search GoPolitix"
+                  historyIdentifier="states"
+                  [itemTemplate]="itemTemplate"
+                  [notFoundTemplate]="notFoundTemplate">
+                </ng-autocomplete>
+                <ng-template #itemTemplate let-item>
+                  <div class="item">
+                    <img src="{{item.photoUrl}}" height="25">
+                    <span [innerHTML]="item.firstName"></span>
+                    <small></small>
+                  </div>
+                </ng-template>
+              
+                <ng-template #notFoundTemplate let-notFound>
+                  <div [innerHTML]="notFound"></div>
+                </ng-template>
+              </div>
+            
             <ul class="navbar-nav ml-auto">
                 <!--<li>
                     <a href="#" id="add-question" class="btn mybtn btn-success">Add Question</a>
